--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Sayri</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title><%= title %></title>
+	  <%= stylesheet_link_tag    "application", :media => "all" %>
+	  <%= javascript_include_tag "application" %>
+	  <%= csrf_meta_tags %>
+  </head>
 
-<%= yield %>
-
-</body>
+	<body>
+		<%= render 'layouts/header' %>
+		<%= content_for?(:content) ? yield(:content) : yield %>							
+		<%= render 'layouts/footer' %>
+	</body>
 </html>
