Add sudoers menu

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,8 +11,8 @@
 						<li class="<%= 'active' if params[:controller] == 'groups' %>"> 
 							<%= link_to "Groups", groups_path %> 
 						</li>
-						<li class="<%= 'active' if params[:controller] == 'hosts' %>"> 
-							<%= link_to "Hosts", hosts_path %> 
+						<li class="<%= 'active' if params[:controller] == 'sudoers' %>"> 
+							<%= link_to "Sudoers", sudoers_path %> 
 						</li>
 					<% end %>
 				</ul>
