Add loginshell in mvc

--- a/app/views/users/_posixaccount.html.erb
+++ b/app/views/users/_posixaccount.html.erb
@@ -2,4 +2,5 @@
 <%= f.text_field :uidnumber, :placeholder => "uidnumber" %>
 <%= f.text_field :gidnumber, :placeholder => "gidnumber" %>
 <%= f.text_field :homedirectory, :placeholder => "Home Directory" %>
+<%= f.text_field :loginshell, :placeholder => "Shell" %>
 <%= f.password_field :userpassword, :value => @user.userpassword %>
