--- a/app/views/sudoers/show.html.erb
+++ b/app/views/sudoers/show.html.erb
@@ -21,6 +21,11 @@
   		<td class ="muted">sudoCommand:</td>
   		<td><%= @sudoer.sudoCommand %></td>
   	</tr>
+        <tr>
+                <td class ="muted">sudoOption:</td>
+                <td><%= @sudoer.sudoOption %></td>
+        </tr>
+
   </tbody>
 </table>
 <p class="text-right">
