--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,6 +3,6 @@
     <% debug(params) if Rails.env.development? %>
   </div>
   <ul class="nav pull-right">
-		<a href="#">Sayri</a> by Rodolfo E. Edelmann
+		<a href="https://github.com/rudicba/sayri">Sayri</a> by Rodolfo E. Edelmann
 	</ul>
 </div>
