--- a/app/views/condors/index.html.erb
+++ b/app/views/condors/index.html.erb
@@ -1,15 +1,14 @@
-<legend>Watched hosts</legend>
 <table class="table table-striped table-bordered">
   <thead>
     <tr>
-      <th>status</th>
-      <th>cn</th>
-      <th><div class="text-center">action</div></th>
+      <th>Status</th>
+      <th>Hostname</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
     <% if @hosts.empty? %>
-      <td colspan="2">
+      <td colspan="3">
         No matching records found
       </td>
     <%end%>
@@ -18,61 +17,23 @@
     <% if @watched.include?(h.cn) %>
       <tr>
         <% if @hrun.include?(h.cn) %>
-          <td><span class="icon-ok"></span></td>
-        <% else %>
-          <td><span class="icon-remove"></span></td>
-        <% end %>
+            <td class="span1">
+              <div class="text-center">
+                <button class="btn btn-mini btn-success disabled" type="button">On</button>
+              </div>
+            </td>
+          <% else %>
+            <td class="span1">
+              <div class="text-center">
+                <button class="btn btn-mini btn-danger disabled" type="button">Off</button>
+              </div>
+            </td>
+          <% end %>
+        </div>
+
         <td><%= h.cn %></td>
-        <td> 
+        <td class="span1"> 
           <div class="text-center">
-            <% if @watched.include?(h.cn) %>
-              <%= link_to '', unwatch_condors_path(h.cn), :class => 'icon-eye-close' %>
-            <% else %>
-              <%= link_to '', watch_condors_path(h.cn), :class => 'icon-eye-open' %>
-            <% end %>
-            <%= link_to '', start_condors_path(h.cn), :class => 'icon-play' %>
-            <%= link_to '', stop_condors_path(h.cn),:class => 'icon-stop' %>
-          </div>
-        </td>
-      </tr>
-<%end%>
-    <%end%>
-
-  </tbody>
-</table>
-
-<legend>No Watched hosts</legend>
-<table class="table table-striped table-bordered">
-  <thead>
-    <tr>
-      <th>status</th>
-      <th>cn</th>
-      <th><div class="text-center">action</div></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% if @hosts.empty? %>
-      <td colspan="2">
-        No matching records found
-      </td>
-    <%end%>
-
-    <% @hosts.each do |h| %>
-    <% if @watched.exclude?(h.cn) %>
-      <tr>
-        <% if @hrun.include?(h.cn) %>
-          <td><span class="icon-ok"></span></td>
-        <% else %>
-          <td><span class="icon-remove"></span></td>
-        <% end %>
-        <td><%= h.cn %></td>
-        <td> 
-          <div class="text-center">
-            <% if @watched.include?(h.cn) %>
-              <%= link_to '', unwatch_condors_path(h.cn), :class => 'icon-eye-close' %>
-            <% else %>
-              <%= link_to '', watch_condors_path(h.cn), :class => 'icon-eye-open' %>
-            <% end %>
             <%= link_to '', start_condors_path(h.cn), :class => 'icon-play' %>
             <%= link_to '', stop_condors_path(h.cn),:class => 'icon-stop' %>
           </div>
