--- a/app/views/hosts/index.html.erb
+++ b/app/views/hosts/index.html.erb
@@ -1,10 +1,11 @@
 <table class="table table-striped table-bordered">
   <thead>
     <tr>
+      <th><div class="text-center">Condor</div></th>
       <th>cn</th>
       <th>description</th>
       <th>ipHostNumber</th>
-      <th><div class="text-center">action</div></th>
+      <th><div class="text-center">Actions</div></th>
     </tr>
   </thead>
   <tbody>
@@ -15,10 +16,18 @@
     <%end%>
     <% @hosts.each do |h| %>
       <tr>
+        <td class="span1"> 
+          <div class="text-center">
+            <div class="btn-group">
+              <%= link_to 'On', {:action => 'watch', :hostname => h.cn}, :class => 'btn btn-success btn-mini', :disabled => @watched.include?(h.cn) %>
+              <%= link_to 'Off', {:action => 'unwatch', :hostname => h.cn}, :class => 'btn btn-danger btn-mini', :disabled => @watched.exclude?(h.cn) %>
+            </div>
+          </div>
+        </td>
         <td><%= link_to h.cn, h%></td>
         <td><%= h.description %></td>
-        <td><%= h.ipHostNumber %></td>
-        <td> 
+        <td class="span1"><%= h.ipHostNumber %></td>
+        <td class="span1"> 
           <div class="text-center">
             <%= link_to '', edit_host_path(h), :rel => "tooltip", 
                                                :title => "Edit Host", :class => 'icon-edit' %>
