--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,6 +24,9 @@
 				</ul>
 				<ul class="nav pull-right">
 					<% if signed_in? %>
+						<li class="<%= 'active' if params[:controller] == 'settings' %>"> 
+							<%= link_to "Settings", settings_path %> 
+						</li>
 						<li class="dropdown">
   							<a class="dropdown-toggle" data-toggle="dropdown" href="#">
     							Profile
