--- a/app/views/condors/index.html.erb
+++ b/app/views/condors/index.html.erb
@@ -1,7 +1,14 @@
+<% if notice %>
+  <div class="alert alert-success">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <%= notice %>
+  </div>
+<% end %>
+
 <table class="table table-striped table-bordered">
   <thead>
     <tr>
-      <th>Status</th>
+      <th>Condor</th>
       <th>Hostname</th>
       <th>Actions</th>
     </tr>
@@ -19,13 +26,13 @@
         <% if @hrun.include?(h.cn) %>
             <td class="span1">
               <div class="text-center">
-                <button class="btn btn-mini btn-success disabled" type="button">On</button>
+                <button class="btn btn-mini btn-success disabled" type="button">Running</button>
               </div>
             </td>
           <% else %>
             <td class="span1">
               <div class="text-center">
-                <button class="btn btn-mini btn-danger disabled" type="button">Off</button>
+                <button class="btn btn-mini btn-danger disabled" type="button">Stopped</button>
               </div>
             </td>
           <% end %>
@@ -34,8 +41,8 @@
         <td><%= h.cn %></td>
         <td class="span1"> 
           <div class="text-center">
-            <%= link_to '', start_condors_path(h.cn), :class => 'icon-play' %>
-            <%= link_to '', stop_condors_path(h.cn),:class => 'icon-stop' %>
+            <%= link_to '', {:action => 'start', :hostname => h.cn}, :class => 'icon-play' %>
+            <%= link_to '', {:action => 'stop', :hostname => h.cn}, :class => 'icon-stop' %>
           </div>
         </td>
       </tr>
