--- a/app/views/hosts/index.html.erb
+++ b/app/views/hosts/index.html.erb
@@ -19,8 +19,13 @@
         <td class="span1"> 
           <div class="text-center">
             <div class="btn-group">
-              <%= link_to 'On', {:action => 'watch', :hostname => h.cn}, :class => 'btn btn-success btn-mini', :disabled => @watched.include?(h.cn) %>
-              <%= link_to 'Off', {:action => 'unwatch', :hostname => h.cn}, :class => 'btn btn-danger btn-mini', :disabled => @watched.exclude?(h.cn) %>
+              <% if @watched.include?(h.cn) %>
+                <button class="btn btn-mini btn-success disabled" type="button">On</button>
+                <%= link_to 'Off', {:action => 'unwatch', :hostname => h.cn}, :class => 'btn btn-danger btn-mini' %>
+              <% else %>
+                <%= link_to 'On', {:action => 'watch', :hostname => h.cn}, :class => 'btn btn-success btn-mini' %>
+                <button class="btn btn-mini btn-danger disabled" type="button">Off</button>
+              <% end %>
             </div>
           </div>
         </td>
