Fix dummy label

--- a/app/views/condors/index.html.erb
+++ b/app/views/condors/index.html.erb
@@ -8,7 +8,7 @@
 <table class="table table-striped table-bordered">
   <thead>
     <tr>
-      <th>Status</th>
+      <th>PC Status</th>
       <th>Condor</th>
       <th>Hostname</th>
       <th>Actions</th>
