--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -10,9 +10,35 @@
 <table class="table table-striped">
 	<tbody>
 	<tr>
-  		<td class ="muted">ipHostNumber:</td>
+  		<td class ="muted span3">ipHostNumber:</td>
   		<td><%= @host.ipHostNumber %></td>
   	</tr>
+    <tr>
+        <td class ="muted">Ping:</td>
+        <td>
+            <% if @host.alive? %>
+                <button class="btn btn-mini btn-success disabled" type="button">Alive</button>
+            <% else %>
+                <button class="btn btn-mini btn-danger disabled" type="button">Dead</button>
+             <% end %>
+        </td>
+    </tr>
+    <tr>
+        <td class ="muted">SSH:</td>
+        <td>
+            <% if @host.ssh? %>
+                <button class="btn btn-mini btn-success disabled" type="button">Alive</button>
+            <% else %>
+                <button class="btn btn-mini btn-danger disabled" type="button">Dead</button>
+             <% end %>
+        </td>
+    </tr>
+    <tr>
+        <td class ="muted">SNMP:</td>
+        <td>
+           <%= @host.snmp %>
+        </td>
+    </tr>
   </tbody>
 </table>
 <p class="text-right">
